# my_shop

./: .env.template  .gitignore  Readme.md  docker-compose.yml  main.py  requirements.txt  start_project.py
bank/: .dockerignore  Dockerfile  app_logger.py  main.py  pyproject.toml  routes.py  schema.py  services.py  supervisord.ini
shop/: Dockerfile  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  supervisord.ini
shop/auth/: custom_log.py  models.py  serializers.py  services.py  urls.py
shop/authorization/: apps.py  custom_log.py  models.py  serializers.py  services.py  urls.py  views.py
shop/common/: admin.py  custom_logger.py  utils.py  validators.py
shop/fixtures/: my_shop.json  my_shop_data.json  products.json
shop/orders/: apps.py  constants.py  exceptions.py  tasks.py  tasks_listeners.py  urls.py  validators.py  views.py
shop/orders/admin/: __init__.py  delivery_type.py  order.py  order_status.py  payment_type.py
shop/orders/forms/: __init__.py  delivery_type.py  order.py  ordered_product.py
shop/orders/migrations/: 0001_initial.py  0002_orderandproduct_order_products.py  0003_deliverytype.py  0004_order_delivery_type.py  0005_paymenttype.py  0006_order_payment_type.py  0007_orderstatus.py  0008_order_status.py  0009_rename_user_order_created_by.py  (+4 more)
shop/products/: apps.py  constants.py  signals.py  urls.py  validators.py  views.py
shop/shop/: celery.py  settings.py  urls.py
shop/user_profile/: admin.py  apps.py  custom_log.py  forms.py  models.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py
(+68 files in other folders)
